# ai-protector

./: .commit-msg.txt  .gitignore  .pre-commit-config.yaml  BENCHMARK.md  BENCHMARK_JAILBREAKBENCH.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  attack-detection.json  internal-suite.json  jailbreakbench.json  mvp-diagram.md  release-please-config.json
apps/agent-demo/: Dockerfile  pyproject.toml
apps/agent-demo/benchmarks/: __init__.py  badge.py  baseline.json  bench_agent_e2e.py  bench_post_tool.py  bench_pre_tool.py  common.py  gen_corpora.py  manifest.json
apps/agent-demo/benchmarks/corpora/: benign_tool_calls.jsonl  benign_tool_outputs.jsonl  e2e_agent_traces.jsonl  post_tool_indirect_injection.jsonl  post_tool_pii_secrets.jsonl  pre_tool_args.jsonl  pre_tool_business_logic.jsonl  pre_tool_rbac.jsonl
apps/agent-demo/src/: config.py  main.py  schemas.py
apps/agent-demo/src/agent/: graph.py  mock_llm.py  state.py
apps/agent-demo/src/agent/limits/: config.py  service.py
apps/agent-demo/src/agent/nodes/: input.py  intent.py  llm_call.py  memory.py  post_tool_gate.py  pre_tool_gate.py  response.py  tools.py
apps/agent-demo/src/agent/rbac/: models.py  service.py
apps/agent-demo/src/agent/security/: message_builder.py
apps/agent-demo/src/agent/tools/: registry.py
apps/agent-demo/src/agent/trace/: __init__.py  accumulator.py  langfuse.py  store.py
apps/agent-demo/src/agent/validation/: schemas.py  validator.py
apps/agent-demo/src/routers/: chat.py  traces.py
apps/agent-demo/tests/: conftest.py  test_arg_validation.py  test_chat_endpoint.py  test_graph.py  test_integration.py  test_limits.py  test_mock_llm.py  test_post_tool_gate.py  test_pre_tool_gate.py  test_rbac.py  test_role_separation.py  test_trace.py  test_trace_store.py
apps/proxy-service/: Dockerfile  pyproject.toml
apps/proxy-service/alembic/: env.py
apps/proxy-service/alembic/versions/: a06c6c7cb3dd_initial_schema.py  a1b2c3d4e5f6_aw_006_traces_incidents_gates_promotions.py  b1e2f3a4c5d6_add_pipeline_jsonb_columns.py  c3d4e5f6a7b8_add_rule_action_severity_description.py
apps/proxy-service/benchmarks/: _capture_protector_decisions.py  badge.py  bench_baseline_openai.py  bench_e2e.py  bench_external.py  bench_jailbreakbench.py  bench_security.py  calibrate_oracle.py  common.py  generate_report.py
apps/proxy-service/benchmarks/results/: baseline_openai.json  defense_in_depth.json  protector_harm_decisions.json
apps/proxy-service/benchmarks/results/baseline_openai_raw/: gpt-3.5-turbo.jsonl  gpt-4.1.jsonl  gpt-4.jsonl  gpt-4o.jsonl  gpt-5-mini.jsonl  gpt-5.1.jsonl  gpt-5.5.jsonl
apps/proxy-service/data/scenarios/: agent.json  compare.json  playground.json
apps/proxy-service/scripts/: warmup_scanners.py
apps/proxy-service/src/: config.py  main.py
apps/proxy-service/src/db/: seed.py
apps/proxy-service/src/llm/: __init__.py  client.py  mock_provider.py  providers.py  streaming.py
apps/proxy-service/src/models/: __init__.py  denylist.py  request.py
apps/proxy-service/src/pipeline/: __init__.py  graph.py  runner.py  state.py
apps/proxy-service/src/pipeline/nodes/: decision.py  harm_ml.py  intent.py  jailbreak_ml.py  llm_call.py  llm_guard.py  logging_node.py  nemo_guardrails.py  output_filter.py  presidio.py  rules.py  scanners.py  transform.py
apps/proxy-service/src/pipeline/rails/: agent_security.co  config.yml  general_security.co  safe_catchall.co
apps/proxy-service/src/pipeline/utils/: deobfuscate.py
apps/proxy-service/src/red_team/: README.md  demo_fixture.py  manifest.py  net.py
apps/proxy-service/src/red_team/api/: __init__.py  routes.py  service.py
apps/proxy-service/src/red_team/engine/: adapters.py  run_engine.py  worker.py
apps/proxy-service/src/red_team/evaluators/: __init__.py  detectors.py  grading.py
apps/proxy-service/src/red_team/export/: business_impact.py  renderer.py
apps/proxy-service/src/red_team/graders/: __init__.py  llama_guard.py
apps/proxy-service/src/red_team/packs/: build_packs.py  fetch_sources.py  loader.py  taxonomy.py
apps/proxy-service/src/red_team/persistence/: models.py  repository.py
apps/proxy-service/src/red_team/progress/: events.py
apps/proxy-service/src/red_team/schemas/: __init__.py  enums.py  models.py
apps/proxy-service/src/red_team/scoring/: calculator.py
apps/proxy-service/src/red_team/secrets/: encryption.py
apps/proxy-service/src/routers/: analytics.py  chat.py  health.py  models.py  policies.py  requests.py  rules.py  scan.py  scenarios.py
apps/proxy-service/src/schemas/: __init__.py  chat.py  health.py  policy_config.py  request.py
apps/proxy-service/src/services/: denylist.py  langfuse_client.py  request_logger.py
apps/proxy-service/src/wizard/: models.py  router.py  schemas.py  seed.py
apps/proxy-service/src/wizard/routers/: agents.py
apps/proxy-service/tests/: conftest.py  test_chat_endpoint.py  test_chat_schemas.py  test_decision_transform.py  test_decision_with_scanners.py  test_graph.py  test_intent_rules.py  test_mock_provider.py  test_models.py  test_nemo_guardrails.py  test_output_filter.py  test_policies_crud.py  test_policy_decision.py  test_policy_validation.py  test_presidio_node.py  test_providers.py  test_request_logger.py  test_rules_crud.py  test_rules_pipeline.py  test_scenario_coverage.py
apps/proxy-service/tests/pipeline/: test_full_pipeline.py  test_graph_routing.py
apps/proxy-service/tests/red_team/: test_adapters.py  test_api_routes.py  test_auth_secrets.py  test_connection.py  test_engine.py  test_evaluators.py  test_export.py  test_grading.py  test_http_client.py  test_json_text_extractor.py  test_llama_guard.py  test_manifest.py  test_packs.py  test_request_template.py  test_schemas.py  test_stage_evaluation.py
apps/proxy-service/tests/wizard/: test_agent_crud.py  test_config_generation.py  test_integration_kit.py  test_tools_roles.py
apps/test-agents/langgraph-agent/: Dockerfile  graph.py  main.py  protection.py  pyproject.toml
apps/test-agents/pure-python-agent/: Dockerfile  main.py  protection.py  pyproject.toml
(+280 files in other folders)
