[project]
name = "ai-protector-agent-demo"
version = "0.2.7" # x-release-please-version
description = "Customer Support Copilot — demo agent behind the AI Protector firewall"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.138.0",
    "uvicorn[standard]==0.49.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "langgraph==1.2.6",
    "litellm==1.89.3",
    "httpx==0.28.1",
    "structlog==26.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-httpx==0.36.2",
    "ruff==0.15.18",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = [
    "B007",   # unused-loop-control-variable (test style)
    "B008",   # function-call-in-default-argument (FastAPI Depends)
    "B017",   # assert-raises-exception (test style)
    "E501",   # line-too-long (handled by formatter)
    "SIM102", # collapsible-if (readability)
    "SIM108", # if-else-block-instead-of-if-exp (readability)
    "SIM115", # open-file-with-context-handler (tempfile pattern)
    "SIM117", # multiple-with-statements (readability)
    "UP042",  # replace-str-enum (StrEnum migration)
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
