[project]
name = "test-agent-python"
version = "0.1.0"
description = "Pure Python test agent with wizard-generated security configs"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "httpx>=0.28",
    "pyyaml>=6",
    "structlog>=24",
    "litellm>=1.60",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]
